renamed yt-loader to yt-player

--- a/site/index.html
+++ b/site/index.html
@@ -20,6 +20,8 @@
     <meta property="og:description" content="My HTML template for getting started with a new site" />
     <meta name="description" content="My HTML template for getting started with a new site" />
 
+    <script type="module" src="/scripts/yt-player.js"></script>
+
     <!--
       <link rel="stylesheet" href="/styles/main.css" />
       <script type="module" src="/script/example.js"></script>
@@ -358,6 +360,5 @@ ul > :where(:not(:first-child)) {
       }
     </script>
 -->
-    <script type="module" src="/scripts/yt-loader.js"></script>
   </body>
 </html>
