Added stop button

--- a/site/index.html
+++ b/site/index.html
@@ -228,6 +228,15 @@ section {
 ul > :where(:not(:first-child)) {
   margin-top: 1em;
 }
+
+.yt-play-button {
+  width: 7ch;
+}
+.yt-stop-button {
+  width: 6ch;
+}
+
+
     </style>
   </head>
  
