Added optional startSeconds attribute

--- a/site/index.html
+++ b/site/index.html
@@ -265,7 +265,10 @@ ul > :where(:not(:first-child)) {
         </p>
         <h2>YouTube Embed Example</h2>
 
-        <yt-player data-id="_YUzQa_1RCE">
+        <yt-player video="_YUzQa_1RCE">
+            <noscript>JavaScript not available to load YouTube player</noscript>
+        </yt-player>
+        <yt-player video="JSkn4zaUh78" start="5" >
             <noscript>JavaScript not available to load YouTube player</noscript>
         </yt-player>
 
