Added og:site_name to see if it gets discord working

--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,7 @@
     <meta name="theme-color" content="#000000" />
 
     <title>Alan's HTML Template</title>
+    <meta property="og:site_name" content="Alan's HTML Template" />
     <meta property="og:title" content="Alan's HTML Template" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://html-template.alanwsmith.com/" />
