Added meta tag to try to get large image to show up

--- a/site/index.html
+++ b/site/index.html
@@ -19,6 +19,7 @@
     <meta property="og:url" content="https://html-template.alanwsmith.com/" />
     <meta property="og:description" content="My HTML template for getting started with a new site" />
     <meta name="description" content="My HTML template for getting started with a new site" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <!--
     TODO: switch to proper og-image
