Another OG test image

--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,7 @@
     <meta name="theme-color" content="#000000" />
 
     <title>Alan's HTML Template</title>
+    <meta property="og:site_name" content="html-template.alanwsmith.com" />
     <meta property="og:title" content="Alan's HTML Template" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://html-template.alanwsmith.com/" />
@@ -23,7 +24,7 @@
     TODO: switch to proper og-image
     <meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image.jpg" />
     -->
-    <meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image-test-1.jpg" />
+    <meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image-test-2.jpg" />
     <!-- -->
 
     <meta property="og:image:width" content="1200" />
