--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,20 @@
     <meta name="msapplication-config" content="/favicons/browserconfig.xml" />
     <meta name="theme-color" content="#000000" />
 
+
+<title>Alan's HTML Template</title>
+<meta name="description" content="My HTML template for getting started with a new site" />
+<meta property="og:site_name" content="html-template.alanwsmith.com" />
+<meta property="og:title" content="Alan's HTML Template" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://html-template.alanwsmith.com/" />
+<meta property="og:description" content="My HTML template for getting started with a new site" />
+<meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image-test-3.jpg" />
+<meta name="twitter:card" content="summary_large_image" />
+
+
+
+    <!--
     <title>Alan's HTML Template</title>
     <meta property="og:site_name" content="html-template.alanwsmith.com" />
     <meta property="og:title" content="Alan's HTML Template" />
@@ -19,16 +33,21 @@
     <meta property="og:url" content="https://html-template.alanwsmith.com/" />
     <meta property="og:description" content="My HTML template for getting started with a new site" />
     <meta name="description" content="My HTML template for getting started with a new site" />
+-->
 
     <!--
     TODO: switch to proper og-image
     <meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image.jpg" />
     -->
-    <meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image-test-2.jpg" />
+    <!--
+    <meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image-test-3.jpg" />
+-->
     <!-- -->
 
+    <!--
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+-->
 
     <!--
       Link Examples:
