--- a/site/index.html
+++ b/site/index.html
@@ -27,13 +27,9 @@
     <meta property="og:image" content="https://html-template.alanwsmith.com/images/og-image-for-html-template.jpg" />
     <!-- END: Remove sample -->
 
-    <!--
-      Link Examples:
-      <link rel="stylesheet" href="/styles/main.css" />
-      <script type="module" src="/script/example.js"></script>
-    -->
-
+    <link rel="stylesheet" href="/styles/yt-player.css" />
     <script type="module" src="/scripts/yt-player.js"></script>
+
     <style>
 
 :root {
@@ -235,23 +231,6 @@ ul > :where(:not(:first-child)) {
   margin-top: 1em;
 }
 
-.yt-play-button {
-  width: 7ch;
-}
-
-yt-player {
-  min-height: 12rem;
-  background-color: blue;
-}
-
-.yt-speed-button {
-  width: 5ch;
-}
-
-.yt-stop-button {
-  width: 6ch;
-}
-
     </style>
   </head>
  
@@ -285,11 +264,9 @@ yt-player {
         <a href="https://yt-player.alanwsmith.com/">yt-player.alanwsmith.com</a>
       </p>
 
-
       <h2>YouTube Embed Example</h2>
-      <yt-player video="_YUzQa_1RCE">
-      </yt-player>
-      <yt-player video="JSkn4zaUh78" start="5">
+      <yt-player video="EzPZ9VCCRmU">
+        <noscript>JavaScript not available to load video player</noscript>
       </yt-player>
 
       <h2>Notes</h2>
